# api/src/main/java/app/simplecloud/api/internal/event/server/ServerStartedEventImpl.java
@@ -1,8 +1,10 @@
 package app.simplecloud.api.internal.event.server;
 
 import app.simplecloud.api.event.server.ServerStartedEvent;
+import app.simplecloud.api.internal.persistentserver.PersistentServerImpl;
 import app.simplecloud.api.internal.server.ServerImpl;
 import app.simplecloud.api.server.Server;
+import app.simplecloud.api.web.models.ModelsPersistentServerInfo;
 import app.simplecloud.api.web.models.ModelsServerGroupInfo;
 import app.simplecloud.api.web.models.ModelsServerSummary;
 
@@ -68,6 +70,8 @@ class ServerStartedEventImpl implements ServerStartedEvent {
 
             summary.setState(convertServerStateToString(delegate.getState()));
 
+            ServerImpl serverImpl = new ServerImpl(summary);
+
             if (delegate.hasGroupConfig() && delegate.getGroupConfig().hasBaseConfig()) {
                 ModelsServerGroupInfo groupInfo = new ModelsServerGroupInfo();
                 var groupConfig = delegate.getGroupConfig();
@@ -76,9 +80,18 @@ class ServerStartedEventImpl implements ServerStartedEvent {
                 groupInfo.setName(baseConfig.getName());
                 groupInfo.setType(convertServerTypeToString(baseConfig.getType()));
                 summary.setServerGroup(groupInfo);
+            } else if (delegate.hasPersistentServerConfig() && delegate.getPersistentServerConfig().hasBaseConfig()) {
+                ModelsPersistentServerInfo persistentServerInfo = new ModelsPersistentServerInfo();
+                var psConfig = delegate.getPersistentServerConfig();
+                var baseConfig = psConfig.getBaseConfig();
+                persistentServerInfo.setId(delegate.getPersistentServerId());
+                persistentServerInfo.setName(baseConfig.getName());
+                persistentServerInfo.setType(convertServerTypeToString(baseConfig.getType()));
+                summary.setPersistentServerId(delegate.getPersistentServerId());
+                serverImpl.setPersistentServer(new PersistentServerImpl(persistentServerInfo));
             }
 
-            server = new ServerImpl(summary);
+            server = serverImpl;
         }
         return server;
     }
