# api/src/main/java/app/simplecloud/api/internal/event/server/ServerStateChangedEventImpl.java
@@ -1,9 +1,11 @@
 package app.simplecloud.api.internal.event.server;
 
 import app.simplecloud.api.event.server.ServerStateChangedEvent;
+import app.simplecloud.api.internal.persistentserver.PersistentServerImpl;
 import app.simplecloud.api.internal.server.ServerImpl;
 import app.simplecloud.api.server.Server;
 import app.simplecloud.api.server.ServerState;
+import app.simplecloud.api.web.models.ModelsPersistentServerInfo;
 import app.simplecloud.api.web.models.ModelsServerGroupInfo;
 import app.simplecloud.api.web.models.ModelsServerSummary;
 
@@ -82,6 +84,8 @@ class ServerStateChangedEventImpl implements ServerStateChangedEvent {
 
             summary.setState(convertServerStateToString(delegate.getNewState()));
 
+            ServerImpl serverImpl = new ServerImpl(summary);
+
             if (delegate.hasGroupConfig() && delegate.getGroupConfig().hasBaseConfig()) {
                 ModelsServerGroupInfo groupInfo = new ModelsServerGroupInfo();
                 var groupConfig = delegate.getGroupConfig();
@@ -90,9 +94,18 @@ class ServerStateChangedEventImpl implements ServerStateChangedEvent {
                 groupInfo.setName(baseConfig.getName());
                 groupInfo.setType(convertServerTypeToString(baseConfig.getType()));
                 summary.setServerGroup(groupInfo);
+            } else if (delegate.hasPersistentServerConfig() && delegate.getPersistentServerConfig().hasBaseConfig()) {
+                ModelsPersistentServerInfo persistentServerInfo = new ModelsPersistentServerInfo();
+                var psConfig = delegate.getPersistentServerConfig();
+                var baseConfig = psConfig.getBaseConfig();
+                persistentServerInfo.setId(delegate.getPersistentServerId());
+                persistentServerInfo.setName(baseConfig.getName());
+                persistentServerInfo.setType(convertServerTypeToString(baseConfig.getType()));
+                summary.setPersistentServerId(delegate.getPersistentServerId());
+                serverImpl.setPersistentServer(new PersistentServerImpl(persistentServerInfo));
             }
 
-            server = new ServerImpl(summary);
+            server = serverImpl;
         }
         return server;
     }
