# api/src/main/java/app/simplecloud/api/internal/server/ServerImpl.java
@@ -3,6 +3,7 @@ package app.simplecloud.api.internal.server;
 import app.simplecloud.api.blueprint.Blueprint;
 import app.simplecloud.api.group.Group;
 import app.simplecloud.api.internal.group.GroupImpl;
+import app.simplecloud.api.internal.persistentserver.PersistentServerImpl;
 import app.simplecloud.api.persistentserver.PersistentServer;
 import app.simplecloud.api.server.Server;
 import app.simplecloud.api.server.ServerState;
@@ -214,6 +215,10 @@ public class ServerImpl implements Server {
     @Override
     @Nullable
     public PersistentServer getPersistentServer() {
+        if  (persistentServer == null && delegate.getPersistentServer() != null) {
+            persistentServer = new PersistentServerImpl(delegate.getPersistentServer());
+        }
+
         return persistentServer;
     }
 }
